refactor: 可変コレクタ Collectors.toList() を不変 Stream.toList() へ統一（#71 レビュー）
infra 層に残っていた Collectors.toList()（可変 ArrayList を返す）を、domain と
同様に不変の Stream#toList() へ統一する。suppressions による可変許可は「許容」で
あって「推奨」ではなく、userland に可変コレクタを選ぶ理由はない。

mapper→JPA エンティティのコレクション代入箇所（setTracks/setEventDateSpaces 用の
組み立て）も .toList() で統合テスト（AlbumRepositoryImplTest 等）が通過することを
確認。userland の可変コレクタはゼロになった。domain の Article#removeTag に残って
いた取りこぼしも是正（冗長な Collections.unmodifiableList ラップも除去）。

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>