@@ -25,7 +25,6 @@ import com.abservice.infrastructure.persistence.entity.TrackTuneId;
 import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import org.jspecify.annotations.Nullable;
 
 /**
@@ -69,7 +68,7 @@ public final class AlbumMapper {
 
     private static List<Track> buildTracks(AlbumEntity entity) {
         return Optional.ofNullable(entity.getTracks())
-                .map(list -> list.stream().map(AlbumMapper::trackToDomain).collect(Collectors.toList()))
+                .map(list -> list.stream().map(AlbumMapper::trackToDomain).toList())
                 .orElseGet(Collections::emptyList);
     }
 
@@ -88,7 +87,7 @@ public final class AlbumMapper {
                 .map(
                         list -> list.stream()
                                 .map(e -> EventDateAndSpace.of(BusinessDate.of(e.getEventDate()), e.getSpaceNumber()))
-                                .collect(Collectors.toList()))
+                                .toList())
                 .or(() -> buildLegacyDateAndSpaces(entity)).orElse(null);
     }
 
@@ -128,7 +127,7 @@ public final class AlbumMapper {
 
     private static void setTracksField(AlbumEntity entity, Album album) {
         Optional.ofNullable(album.tracks()).filter(not(List::isEmpty))
-                .map(tracks -> tracks.stream().map(track -> trackToEntity(track, entity)).collect(Collectors.toList()))
+                .map(tracks -> tracks.stream().map(track -> trackToEntity(track, entity)).toList())
                 .ifPresent(entity::setTracks);
     }
 
@@ -153,7 +152,7 @@ public final class AlbumMapper {
             entity.setCreatedByService("abservice");
             entity.setUpdatedByService("abservice");
             return entity;
-        }).collect(Collectors.toList()));
+        }).toList());
     }
 
     private static void populateLegacyDateAndSpace(AlbumEntity albumEntity, EventDateAndSpace firstDateSpace) {
@@ -190,7 +189,7 @@ public final class AlbumMapper {
 
     private static List<TrackTune> buildTrackTunes(TrackEntity entity) {
         return Optional.ofNullable(entity.getTrackTunes())
-                .map(list -> list.stream().map(AlbumMapper::trackTuneToDomain).collect(Collectors.toList()))
+                .map(list -> list.stream().map(AlbumMapper::trackTuneToDomain).toList())
                 .orElseGet(Collections::emptyList);
     }
 
@@ -229,7 +228,7 @@ public final class AlbumMapper {
         Optional.ofNullable(track.tunes()).filter(not(List::isEmpty))
                 .map(
                         tunes -> tunes.stream().map(trackTune -> trackTuneToEntity(trackTune, entity))
-                                .collect(Collectors.toList()))
+                                .toList())
                 .ifPresent(entity::setTrackTunes);
     }
 
